<resources>
    <string name="app_name">Gurudwara Time</string>
    <string name="msg_welcome_gur_fateh">Waheguru Ji Ka Khalsa\n
        Waheguru Ji Ki Fateh ji</string>

    <string name="msg_welcome_inst_to_activate">To activate auto silent mode</string>
    <string name="msg_welcome_inst_needs_permission">needs permission to access</string>
    <string name="title_welcome_text_location_permission"><big><b>device location</b></big>
        \nTo detect device\n&amp; Gurudwara location</string>

    <string name="title_welcome_text_dnd_permission"><big><b>\'do not disturb\' access</b></big>
        \nTo put phone in Silent mode</string>

    <string name="action_welcome_button_text_give_location_access">
        1.\tGive Location Access</string>

    <string name="action_welcome_button_text_give_dnd_access">
        2.\tGive DND Access</string>

    <string name="action_include_list">Include More Places</string>
    <string name="action_exclude_list">Exclude List</string>
    <string name="action_show_nearby_gurudwaras">Show Nearby Gurudwaras</string>
    <string name="msg_waheguru_ji">Waheguru ji</string>

    <string name="msg_no_location_detected">Phone will be put to\nsilent mode when\n
        it is in Gurudwara for\napprox 1 minute\n\n<small>Note: Phone will not silent
            \nat Gurudwaras in exclude list \n or if your phone is already silent</small></string>

    <string name="msg_auto_silent_off">Auto Silent setting is off\n
        Phone will <u>not</u>\nautomatically silent in\nGurudwara</string>

    <string name="msg_at_location">Phone is put to\nsilent mode at</string>

    <string name="msg_auto_silent_init">Please wait…\nFetching nearby\nGurudwara Locations</string>

    <string name="sample_gurudwara_name">Sri Bangla Sahib Gurdwara</string>
    <string name="sample_gurudwara_vicinity">Hanuman Road Area,\nConnaught Place, New Delhi</string>
    <string name="sample_gurudwara_city">New Delhi</string>

    <string name="sample_location_name">Purvanchal Heights</string>
    <string name="sample_location_vicinity">Greater Noida</string>
    <string name="sample_location_city">Greater Noida</string>

    <string name="action_undo_silent">Undo Silent</string>
    <string name="action_never_silent">Never Silent Here</string>
    <string name="action_overflow_menu">Menu</string>
    <string name="sample_gurudwara_text">Sri Bangla Sahib Gurdwara\n<small>Hanuman Road Area,
        \nConnaught Place, New Delhi</small></string>
    <string name="title_switch_auto_silent">Auto Silent Mode</string>
    <string name="action_vibrate">Vibrate</string>
    <string name="action_setting_silent">Silent</string>
    <string name="msg_nearby_list">Nearby Gurudwara List</string>
    <string name="a11y_navigate_location_item">Navigate</string>
    <string name="title_auto_silent_off">Auto Silent Off</string>
    <string name="msg_you_are_at">You are at</string>
    <string name="msg_exclude_list">Exclude Gurudwara locations\nfrom auto silent</string>
    <string name="action_exclude_location">Exclude</string>
    <string name="action_clear_list">Clear List</string>
    <string name="action_refresh">Refresh</string>

    <string name="msg_include_list">Include more locations\nfor auto silent</string>
    <string name="action_include_location">Include</string>
    <string name="msg_location_permission_rationale">Location permission is needed to\ndetect
        device &amp; Gurudwara Location.</string>
    <string name="msg_permission_denied_explanation">Location permission was denied,
        but is needed for core functionality.</string>
    <string name="action_app_settings">Settings</string>
    <string name="msg_permissions_needed">These permissions are needed for core functionality.
    </string>
    <string name="msg_permissions_granted">All permissions granted.</string>
    <string name="location_notification_channel">Nearby Sync Updates</string>
    <string name="geofence_notification_channel">Ringer mode change notifications</string>
    <string name="unknown_location">Unknown Location</string>
    <string name="msg_synced_nearby_gurudwaras">Nearby Gurudwaras saved</string>
    <string name="msg_location_name_placeholder">                        </string>
    <string name="msg_location_vicinity_placeholder">               \n                </string>
    <string name="msg_silent_mode_activated">Silent mode activated</string>
    <string name="msg_back_to_normal">Back to normal</string>
    <string name="msg_touch_to_launch">Touch to launch app</string>
    <string name="msg_place_name_default_at_location">this location</string>
    <string name="msg_place_vicinity_default_at_location" />


    <plurals name="num_locations_reported">
        <item quantity="zero">No location reported</item>
        <item quantity="one">One location reported</item>
        <item quantity="other">%d locations reported</item>
    </plurals>
</resources>
