<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_status_widget"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    android:padding="@dimen/widget_margin">

    <TextView
        android:id="@+id/text_title_status_widget"
        style="@style/WidgetTextBox"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_weight="1"
        android:padding="@dimen/small_margin"
        android:text="@string/msg_waheguru_ji"
        android:textAppearance="@style/TextInstruction" />

    <TextView
        android:id="@+id/text_subtitle_status_widget"
        style="@style/WidgetStatusTextBox"
        android:layout_weight="3"
        android:padding="@dimen/small_margin"
        android:textAppearance="@style/TextBody"
        android:visibility="visible"
        tools:text="@string/msg_you_are_at" />

    <TextView
        android:id="@+id/text_location_name_status_widget"
        style="@style/WidgetLocationTextBox"
        android:layout_weight="3"
        android:paddingLeft="@dimen/small_margin"
        android:paddingTop="@dimen/small_margin"
        android:paddingRight="@dimen/small_margin"
        android:textAppearance="@style/TextInstruction"
        tools:text="@string/sample_gurudwara_name" />

    <TextView
        android:id="@+id/text_location_vicinity_status_widget"
        style="@style/WidgetLocationTextBox"
        android:layout_weight="3"
        android:paddingLeft="@dimen/small_margin"
        android:paddingRight="@dimen/small_margin"
        android:paddingBottom="@dimen/small_margin"
        android:textAppearance="@style/TextBody"
        tools:text="@string/sample_gurudwara_vicinity" />


</LinearLayout>