<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".status.StatusActivity"
    tools:showIn="@layout/activity_status">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/const_layout_status"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/small_margin"
        android:background="?attr/colorPrimary"
        app:elevation="@dimen/card_elevation_material"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_silent_mode_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            android:layout_marginBottom="@dimen/default_margin"
            android:text="@string/msg_at_location"
            android:textAlignment="center"
            android:textAppearance="@style/TextInstruction"
            app:layout_constraintBottom_toTopOf="@+id/text_gurudwara_info_at_location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_gurudwara_info_at_location"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="?attr/colorAccent"
            android:gravity="center"
            android:padding="@dimen/default_margin"
            android:text="@string/sample_gurudwara_text"
            android:textAlignment="center"
            android:textAppearance="@style/TextInstruction"
            android:textColor="?android:textColorPrimaryInverse"
            app:layout_constraintBottom_toTopOf="@+id/button_never_silent_here"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_silent_mode_status" />

        <Button
            android:id="@+id/button_undo_silent"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:drawableStart="@drawable/ic_action_undo_white_24dp"
            android:drawableLeft="@drawable/ic_action_undo_white_24dp"
            android:text="@string/action_undo_silent"
            app:backgroundTint="@android:color/black"
            app:layout_constraintBottom_toBottomOf="@id/button_never_silent_here"
            app:layout_constraintEnd_toStartOf="@+id/button_never_silent_here"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/button_never_silent_here" />

        <Button
            android:id="@+id/button_never_silent_here"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_action_exclude_white_24dp"
            android:drawableLeft="@drawable/ic_action_exclude_white_24dp"
            android:text="@string/action_never_silent"
            app:backgroundTint="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button_undo_silent" />

        <android.support.constraint.Group
            android:id="@+id/group_at_location_ui"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="button_undo_silent,text_gurudwara_info_at_location,button_never_silent_here" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/switch_silent_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:onClick="onAutoSilentSwitchClick"
        android:text="@string/title_switch_auto_silent"
        android:textAppearance="@style/TextInstruction"
        app:buttonTint="@android:color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/const_layout_status"
        app:switchPadding="@dimen/default_margin" />

    <Button
        android:id="@+id/button_show_nearby_status"
        style="@style/BottomActionButton"
        android:onClick="onNearbyButtonClick"
        android:text="@string/action_show_nearby_gurudwaras"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/action_setting_vibrate"
        style="@style/SettingsButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_action_setting_vibrate_white_24dp"
        android:drawableLeft="@drawable/ic_action_setting_vibrate_white_24dp"
        android:text="@string/action_vibrate"
        app:layout_constraintEnd_toStartOf="@+id/action_setting_silent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_silent_mode" />

    <Button
        android:id="@+id/action_setting_silent"
        style="@style/SettingsButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_action_setting_silent_white_24dp"
        android:drawableLeft="@drawable/ic_action_setting_silent_white_24dp"
        android:text="@string/action_setting_silent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/action_setting_vibrate"
        app:layout_constraintTop_toBottomOf="@+id/switch_silent_mode" />


</android.support.constraint.ConstraintLayout>