<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/small_margin"
    app:cardBackgroundColor="?attr/colorAccent"
    app:cardCornerRadius="@dimen/radius_corner_rect">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/small_margin">

        <TextView
            android:id="@+id/text_location_name_list_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/sample_location_name"
            android:textAppearance="@style/TextBody"
            android:textColor="?android:attr/textColorPrimaryInverse"
            app:layout_constraintEnd_toStartOf="@+id/button_map_location_item"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_location_vicinity_list_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sample_location_vicinity"
            android:textAppearance="@style/TextBodySmall"
            android:textColor="?android:attr/textColorSecondaryInverse"
            app:layout_constraintEnd_toEndOf="@+id/text_location_name_list_item"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/text_location_name_list_item"
            app:layout_constraintTop_toBottomOf="@+id/text_location_name_list_item" />


        <ImageButton
            android:id="@+id/button_map_location_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginEnd="@dimen/small_margin"
            android:layout_marginRight="@dimen/small_margin"
            android:contentDescription="@string/a11y_navigate_location_item"
            android:padding="@dimen/default_margin"
            app:backgroundTint="@color/colorPrimaryLight"
            app:layout_constraintEnd_toStartOf="@id/button_navigation_location_item"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_action_map_location_white_24dp"
            app:tint="@android:color/black" />

        <ImageButton
            android:id="@+id/button_navigation_location_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginEnd="@dimen/small_margin"
            android:layout_marginRight="@dimen/small_margin"
            android:contentDescription="@string/a11y_navigate_location_item"
            android:padding="@dimen/default_margin"
            app:backgroundTint="@color/colorPrimaryLight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_action_navigate_location_white_24dp"
            app:tint="@android:color/black" />


    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>